force-app/main/default/objects/Pull_Request__c/Pull_Request__c.object-meta.xml
<CustomObject>
    <label>Pull Request</label>
    <pluralLabel>Pull Requests</pluralLabel>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Pull Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>