force-app/main/default/objects/Pull_Request__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>Text</type>
    <length>80</length>
</CustomField>