force-app/main/default/objects/Pull_Request__c/fields/Files_Changed__c.field-meta.xml
<CustomField>
    <fullName>Files_Changed__c</fullName>
    <label>Files Changed</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>