force-app/main/default/objects/Pull_Request__c/fields/Lines_Removed__c.field-meta.xml
<CustomField>
    <fullName>Lines_Removed__c</fullName>
    <label>Lines Removed</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>