force-app/main/default/objects/Pull_Request__c/fields/PR_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Number__c</fullName>
    <label>PR Number</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>