force-app/main/default/objects/Pull_Request__c/fields/Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Count__c</fullName>
    <label>Review Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>