force-app/main/default/objects/Pull_Request__c/fields/Source_Branch__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch__c</fullName>
    <label>Source Branch</label>
    <type>Text</type>
    <length>255</length>
</CustomField>