force-app/main/default/objects/Pull_Request__c/fields/Target_Branch__c.field-meta.xml
<CustomField>
    <fullName>Target_Branch__c</fullName>
    <label>Target Branch</label>
    <type>Text</type>
    <length>255</length>
</CustomField>