force-app/main/default/objects/Pull_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>State__c</columns>
    <columns>Repository__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Merged_Date__c</columns>
    <columns>Author__c</columns>
</ListView>